Fix Jira build for Java 17 compatibility