@@ -8,7 +8,7 @@
     <parent>
         <groupId>com.adaptavist.pom</groupId>
         <artifactId>scriptrunner-jira-standard</artifactId>
-        <version>78</version>
+        <version>71</version>
         <relativePath/>
     </parent>
 
@@ -41,27 +41,55 @@
                 <groupId>com.atlassian.maven.plugins</groupId>
                 <artifactId>jira-maven-plugin</artifactId>
                 <configuration>
-                    <jvmArgs>-Xms512m -Xmx1g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
+                    <jvmArgs>-Xms512m -Xmx1g -server --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED</jvmArgs>
                     <applications>
                         <!-- Uncomment these if you wish to include them -->
 
                         <!-- Include Jira Software features -->
-                        <!--
+                        
                         <application>
                             <applicationKey>jira-software</applicationKey>
                             <version>${jira.software.version}</version>
                         </application>
-                        -->
+                        
 
                         <!-- Include Jira Service Desk features -->
-                        <!--
+                        
                         <application>
                             <applicationKey>jira-servicedesk</applicationKey>
                             <version>${jira.servicedesk.version}</version>
                         </application>
-                        -->
+                        
                     </applications>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <!-- Use version compatible with Maven 3.8.1 -->
+                <version>3.0.2</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compileTests</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <!-- Explicitly override Groovy version to handle Java 23 class files -->
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                        <version>4.0.21</version>
+                        <type>pom</type>
+                        <exclusions>
+                            <exclusion>
+                                <groupId>org.codehaus.groovy</groupId>
+                                <artifactId>*</artifactId>
+                            </exclusion>
+                        </exclusions>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
